--- a/src/client/styles/style.scss
+++ b/src/client/styles/style.scss
@@ -63,6 +63,11 @@ input {
     box-shadow: 2px 2px 3px #444;
 }
 
+input:hover {
+    border: 1px solid #3b4a6b;
+    box-shadow:1px 1px 5px #3b4a6b;
+ }
+
 button {
     width: 100%;
     height: 10%;
@@ -73,6 +78,11 @@ button {
     border: none;
     box-shadow: 2px 4px 5px #444;
     margin-top: 2%;
+}
+
+button:hover {
+    color: #22b2da;
+    box-shadow: 1px 3px 5px #444;
 }
 h1 {
     font-size: 36px;
